Fixing colors and display on small devices

--- a/app/assets/stylesheets/main_page.css.scss
+++ b/app/assets/stylesheets/main_page.css.scss
@@ -4,10 +4,10 @@
 body{
   background: repeating-linear-gradient(
   45deg,
-  #FF0000,
-  #ff0000 20px,
-  #FFA07A 20px,
-  #FFA07A 40px
+  #6666CC,
+  #6666CC 20px,
+  #6699FF 20px,
+  #6699FF 40px
 );
 }
 
